# orderbook-ai

./: .gitignore  1_HANDOFF_INSTRUCTIONS.md  2_EXECUTION_PROMPT.md  3_MVP_SCOPE.md  4_PRD.md  5_TECHNICAL_ARCHITECTURE.md  6_DOCS_GLOSSARY.md  7_ARCHITECTURE_EXTRA.MD  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  fuzz-build.yml
benches/: price_level_prototypes.rs  throughput.rs
docs/: architecture.md  engine-performance.md  glossary.md  learning-path.md  milestones.md  performance.md  technical-architecture.md
docs/learning/: 00-start-here.md  01-big-picture.md  02-core-domain.md  03-matching-flow.md  05-guided-exercises.md  06-visual-guide.md  07-why-this-design.md  08-performance-bridge.md
examples/: basic_flow.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: common.rs  order_flow.rs  replay_consistency.rs
scripts/: profile_bench.sh  run_fuzz.sh
src/: errors.rs  events.rs  lib.rs  market_config.rs  matching.rs  order.rs  order_book.rs  price_level.rs  types.rs  validation.rs
tests/: cancels.rs  events.rs  fifo.rs  invariants.rs  market_orders.rs  matching.rs  minimal.rs  partial_fills.rs  property.rs  replay.rs  serde.rs  validation.rs
tests/support/: mod.rs
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/docs/: page.tsx
web/app/learn/: page.tsx
web/components/docs/: docs-layout.tsx  docs-sidebar.tsx  docs-toc.tsx  markdown-renderer.tsx
web/lib/: docs-config.ts  docs.ts  engine-client.ts  glossary.ts  learning-content.ts  mock-chart-data.ts  order-calculations.ts
(+35 files in other folders)
